--- a/index.html
+++ b/index.html
@@ -13,8 +13,24 @@
     <link rel="shortcut icon" href="/src/assets/favicons/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="/src/assets/favicons/apple-touch-icon.png" />
     <meta name="apple-mobile-web-app-title" content="PortfólioIvan" />
-    <link rel="manifest" href="/src/assets/favicons/site.webmanifest" />      
-    <title>Portfólio-IvanMartins</title>
+    <link rel="manifest" href="/src/assets/favicons/site.webmanifest" />   
+
+    <!-- Open Graph (Facebook, LinkedIn, etc) -->
+    <meta property="og:title" content="Ivan Martins – Desenvolvedor de Sistemas | MartCode" />
+    <meta property="og:description" content="Portfólio de Ivan Martins, especializado em desenvolvimento de sistemas e sites. Confira projetos, habilidades e formas de contato." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://martcode.com.br" />
+    <meta property="og:image" content="https://martcode.com.br/images/social-image.png" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Ivan Martins – Desenvolvedor de Sistemas | MartCode" />
+    <meta name="twitter:description" content="Portfólio de Ivan Martins, especializado em desenvolvimento de sistemas e sites." />
+    <meta name="twitter:image" content="https://martcode.com.br/images/social-image.png" />
+
+    <title>Ivan Martins – Desenvolvedor de Sistemas | MartCode</title>
+    <meta name="description" content="Portfólio de Ivan Martins, especializado em desenvolvimento de sistemas e sites. Confira projetos, habilidades e formas de contato.">
+
   </head>
   <body>
     <div id="root"></div>
