Change social image format from PNG to JPEG
Updated Open Graph and Twitter meta tags to use JPEG image.

--- a/index.html
+++ b/index.html
@@ -31,14 +31,18 @@
     <meta property="og:description" content="Portfólio de Ivan Martins, especializado em desenvolvimento de sistemas e sites. Confira projetos, habilidades e formas de contato." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://martcode.com.br" />
-    <meta property="og:image" content="https://martcode.com.br/images/social-image.png" />
+    <meta property="og:image" content="https://martcode.com.br/images/social-image.jpeg" />
     <meta name="facebook-domain-verification" content="2zlhw17zcqydiysnpewnesrdiwyn45" />
+    <meta property="og:image:secure_url" content="https://martcode.com.br/images/social-image.jpeg" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
     
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Ivan Martins – Desenvolvedor de Sistemas | MartCode" />
     <meta name="twitter:description" content="Portfólio de Ivan Martins, especializado em desenvolvimento de sistemas e sites." />
-    <meta name="twitter:image" content="https://martcode.com.br/images/social-image.png" />
+    <meta name="twitter:image" content="https://martcode.com.br/images/social-image.jpeg" />
 
     <title>Ivan Martins – Desenvolvedor de Sistemas | MartCode</title>
     <meta name="description" content="Portfólio de Ivan Martins, especializado em desenvolvimento de sistemas e sites. Confira projetos, habilidades e formas de contato.">
