--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     <link rel="stylesheet" href="/src/assets/css/devicon.min.css" />
 
     <!-- Favicons -->
-    <link rel="icon" type="image/png" href="/src/assets/favicons/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/favicons/favicon.svg" />
-    <link rel="shortcut icon" href="/src/assets/favicons/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/src/assets/favicons/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" href="/public/favicons/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/public/favicons/favicon.svg" />
+    <link rel="shortcut icon" href="/public/favicons/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/public/favicons/apple-touch-icon.png" />
     <meta name="apple-mobile-web-app-title" content="PortfólioIvan" />
-    <link rel="manifest" href="/src/assets/favicons/site.webmanifest" />   
+    <link rel="manifest" href="/public/favicons/site.webmanifest" />   
 
     <!-- Open Graph (Facebook, LinkedIn, etc) -->
     <meta property="og:title" content="Ivan Martins – Desenvolvedor de Sistemas | MartCode" />
